<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacground_color"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btnvD"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_v_details"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/btnFav"
        app:layout_constraintEnd_toEndOf="@+id/btnFav"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnFav"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnFav"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_fav"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/btnUpN"
        app:layout_constraintEnd_toEndOf="@+id/btnUpN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnUpN"
        app:layout_constraintTop_toBottomOf="@+id/btnvD" />

    <Button
        android:id="@+id/btnUpN"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_upload"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/btnfeedbk"
        app:layout_constraintEnd_toEndOf="@+id/btnfeedbk"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnfeedbk"
        app:layout_constraintTop_toBottomOf="@+id/btnFav" />

    <Button
        android:id="@+id/btnfeedbk"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_feedback"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/btnUplImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpN" />

    <Button
        android:id="@+id/btnUplImg"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/more1"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/Btn_fav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnfeedbk" />



    <Button
        android:id="@+id/Btn_fav"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/more2"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUplImg" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="382dp"
        android:layout_height="145dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/joyjourney"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012"
        app:srcCompat="@drawable/jj1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="382dp"
        android:layout_height="152dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/jdk99" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.229" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />






















</androidx.constraintlayout.widget.ConstraintLayout>